--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@rails/webpacker": "^4.0.2",
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
+    "mapbox-gl": "^0.53.1",
+    "places.js": "^1.16.1",
     "popper.js": "^1.14.7"
   },
   "devDependencies": {
