--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "popper.js": "^1.14.7"
   },
   "devDependencies": {
+    "autoprefixer": "^9.5.0",
+    "cssnano": "^4.1.10",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "sugarss": "^2.0.0",
     "webpack-dev-server": "^3.2.1"
   }
 }
