--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
-meta_product_name: "Olibre"
-meta_title: "Olibre - Toute la natation en eau libre près de chez toi"
-meta_description: "Olibre te permet de rechercher et créer des évènements de natation en eau libre en France."
-meta_image: "eaulibre.png" # should exist in `app/assets/images/`
+meta_product_name: "Ôlibre"
+meta_title: "Ôlibre - Toute la natation en eau libre près de chez toi"
+meta_description: "Ôlibre te permet de rechercher et créer des évènements de natation en eau libre en France."
+meta_image: "eaulibre.png" # should exist in `app/assets/images/
