changed the name of the app to eaulibre

--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
-meta_product_name: "Ôlibre"
-meta_title: "Ôlibre - Toute la natation en eau libre près de chez toi"
-meta_description: "Ôlibre te permet de rechercher et créer des évènements de natation en eau libre en France."
+meta_product_name: "Eau libre"
+meta_title: "Eau libre - Toute la natation en eau libre près de chez toi"
+meta_description: "Eau libre te permet de rechercher et créer des évènements de natation en eau libre en France."
 meta_image: "eaulibre.png" # should exist in `app/assets/images/
